# cw_6

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/templates/blog/: blogpost_detail.html  blogpost_list.html
blog/templatetags/: my_tags.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_list.html
config/: settings.py  urls.py
index/: urls.py  views.py
index/templates/index/: base.html  index.html
index/templates/index/include/: main_menu.html
logs/: forms.py  models.py  urls.py  views.py
logs/templates/logs/: logs_list.html
mailsender/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailsender/migrations/: 0001_initial.py
mailsender/templates/mailsender/: base.html  client_create.html  index.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailsender/templates/mailsender/include/: main_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/templates/users/: email_verification.html  user_login.html  user_profile.html  user_registration.html
