[tool.poetry]
name = "cw-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cw_6"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
shell = "^1.0.1"
pillow = "^10.0.0"
crontab = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
